# django_cw_4

./: .env.example  .gitignore  README.MD  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_mailing_owner_recipient_owner_and_more.py  0003_alter_mailing_first_sending.py  0004_alter_mailing_options.py  0005_message_owner.py
mailing/tampletags/: my_tags.py
mailing/templates/mailing/: home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_report.html  main_page.html  recipient_confirm_delete.html  recipient_detail.html
mailing/templates/mailing/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_user_avatar_user_country_user_phone_number.py  0004_alter_user_options.py
users/templates/users/: user_detail.html  user_list.html
