[tool.poetry]
name = "django-cw-4"
version = "0.1.0"
description = ""
authors = ["marinabrovko <marishka.brovko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
