[tool.poetry]
name = "django-cw-4"
version = "0.1.0"
description = ""
authors = ["marinabrovko <marishka.brovko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
psycopg-binary = "^3.2.3"
psycopg = "^3.2.3"
black = "^24.10.0"
ipython = "^8.31.0"
pillow = "^11.1.0"
redis = "^5.2.1"
django-phonenumber-field = "^8.0.0"
django-phonenumbers = "^1.0.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
